bfg-main/bfg-ui/src/app/features/sepa-dashboard/transactions-with-value/transactions-with-value/transactions-with-value-reports-dialog/transactions-with-value-reports-dialog.component.scss
.dialog-container {
    position: relative;

    .header {
        display: flex;
        margin: -24px -24px -14px -24px !important;
        padding: 24px 24px;
        word-break: break-all;

        .dialog-title {
            margin: 0 !important;
        }

        .close-icon {
            margin-left: auto;
            cursor: pointer !important;
        }
    }

    .search-params-section {
        display: flex;

        .form-field {
            margin-right: 15px;
            min-width: 222px;
        }
    }

    .mat-dialog-actions {

        justify-content: flex-end;

        .action-button:not(.mat-button-disabled) {
            background-color: green;
            color: #fff;
        }
    }

}

